# pruebas_geomagic

./: .gitignore  CMakeLists.txt  README.md  cosas.txt
cmake/: FindLib.cmake  TargetLink.cmake
code/: CMakeLists.txt
code/QtGui/: mainwindow.ui
code/cmake/: FindLib.cmake
code/include/position/: position.hpp
code/src/position/: position.cpp
code/src/qt/: mainwindow.cpp
docker/: docker-compose.yml  egm.dockerfile  ros2.dockerfile  run.sh  touch.dockerfile  yarp.dockerfile
include/engine/: engine.h
include/position/: position.hpp
ros2_interfaces/src/geomagic_control/: CMakeLists.txt  package.xml
ros2_interfaces/src/geomagic_control/include/geomagic_control/: cartesianToHapticFeedbackNode.h  hapticToCartesianNode.h
ros2_interfaces/src/geomagic_control/include/geomagic_control/cartesianToHaptic/: cartesianToHapticFeedbackNode.h  cartesianToHaptic_interface.hpp
ros2_interfaces/src/geomagic_control/include/geomagic_control/fullHaptic/: fullHaptic.h
ros2_interfaces/src/geomagic_control/include/geomagic_control/hapticToCartesian/: hapticToCartesianNode.h  hapticToCartesian_interface.hpp
ros2_interfaces/src/geomagic_control/include_priv/geomagic_control/cartesianToHaptic/: cartesianToHaptic_abb.hpp  cartesianToHaptic_teo.hpp
ros2_interfaces/src/geomagic_control/include_priv/geomagic_control/cartesianToHaptic/baseNode/: cartesianToHaptic_baseNode.hpp
ros2_interfaces/src/geomagic_control/include_priv/geomagic_control/hapticToCartesian/: hapticToCartesian_abb.hpp  hapticToCartesian_teo.hpp
ros2_interfaces/src/geomagic_control/include_priv/geomagic_control/hapticToCartesian/baseNode/: hapticToCartesian_baseNode.hpp
ros2_interfaces/src/geomagic_control/src/: cartesianToHapticFeedbackNode.cpp  hapticToCartesianNode.cpp  main.cpp
ros2_interfaces/src/geomagic_control/src/cartesianToHaptic/: cartesianToHapticFeedbackNode.cpp  cartesianToHaptic_abb.cpp  cartesianToHaptic_teo.cpp
ros2_interfaces/src/geomagic_control/src/cartesianToHaptic/baseNode/: cartesianToHaptic_baseNode.cpp
ros2_interfaces/src/geomagic_control/src/fullHaptic/: fullHaptic.cpp
ros2_interfaces/src/geomagic_control/src/hapticToCartesian/: hapticToCartesianNode.cpp  hapticToCartesian_abb.cpp  hapticToCartesian_teo.cpp
ros2_interfaces/src/geomagic_control/src/hapticToCartesian/baseNode/: hapticToCartesian_baseNode.cpp
ros2_interfaces/src/geomagic_control_cpp/: CMakeLists.txt  package.xml
ros2_interfaces/src/geomagic_control_cpp/src/hapticToCartesian/: hapticToCartesianNode.cpp
ros2_interfaces/src/geomagic_control_py/: package.xml  setup.cfg  setup.py
ros2_interfaces/src/geomagic_control_py/geomagic_control_py/: cartesian_to_haptic.py  cartesian_to_haptic_feedback.py  full_haptic.py  haptic_to_cartesian.py
src/: CMakeLists.txt  main.cpp  main.hpp
src/engine/: engine.cpp
src/position/: position.cpp
src/qt/: mainwindow.cpp
